--- a/src/css/Cruise.css
+++ b/src/css/Cruise.css
@@ -121,9 +121,10 @@
     z-index: 1;
     background-image: linear-gradient(135deg, #b8cbb8 0%, #b8cbb8 0%, #b465da 0%, #cf6cc9 33%, #ee609c 66%, #ee609c 100%);
     background-color: #B465DA;
-    width: 55px;
-    height: 55px;
+    width: 60px;
+    height: 60px;
     padding: 12.5px 0;
+    border: 1px solid white;
     border-radius: 100%;
     color: white;
     font-weight: 700;
